updated duo .. fixed gallery styling, now showing slightly larger image with less spacing between images

--- a/css/style.css
+++ b/css/style.css
@@ -272,13 +272,13 @@ nav a:hover {
   display: grid;
   max-width: 950px;
   margin: 0 auto;
-  grid-column-gap: 50px;
+  grid-column-gap: 25px;
   grid-template-columns: 200px 200px 200px 200px;
   grid-template-rows: auto auto auto;
   padding: 10px;
 }
 
-.grid-item-gallery {
+/*.grid-item-gallery {
   background-color: rgba(41, 41, 42, 0.7);
   border-radius: 25px;
   padding:20px;
@@ -287,18 +287,23 @@ nav a:hover {
   max-height: 225px;
   margin-bottom: 25px;
   justify-self: center;
-}
+}*/
 
 .gallery-image {
   width: 100%;
   height: 100%;
+  /*border: 1px solid rgb(41, 41, 42);
+  border-radius: 25px;*/
 }
 
 .gallery-image > img {
   /*max-width: 100%;
   max-height: 150px;*/
-  width: 175px;
-  height: 175px;
+  width: 100%;
+  height: 200px;
+  border-radius: 25px;
+  border: 3px solid rgb(41, 41, 42);
+  margin-bottom: 25px;
   overflow: hidden;
 }
 
@@ -391,7 +396,7 @@ nav a:hover {
   color: white;
   max-width: 1000px;
   margin: 0 auto;
-  padding: 50px;
+  padding: 0 50px;
   text-align: left;
   line-height: 1.5;
   border-radius: 25px;
@@ -402,7 +407,7 @@ nav a:hover {
   font-weight: bold;
 }
 
-.content > h2 {
+#contactus > .content > h2 {
   color: black;
 }
 
@@ -498,6 +503,7 @@ nav a:hover {
 footer {
   text-align: center;
   margin-top: 50px;
+  color: black;
 }
 
 
